# doc2response

./: .gitignore  README.md  demo_call_llamaindex.py  demo_load_docs_to_llamaindex.py  demo_transcripts_to_docs.py  pyproject.toml
assistant_latex copy/Simulation/Whirlwind Tour Of Simulation/: Course Introduction.tex  Evaluation and Future Directions.tex  Practical Examples and Applications.tex  Simulation Course Overview.tex  Simulation Methodologies.tex  assistant_message.tex  metadata.json
interfaces/: database_interface.py
latex_merger/: generate_latex_doc.py  start.txt
src/: README.md  demo_call_llamaindex.py  demo_load_docs_to_llamaindex.py  demo_transcripts_to_docs.py  logger.py  orchestrator.py  skeleton_builder.py  subsection_enhancer.py
src/agents/: base_notes_agent.py  enhancer_agent.py  mdframe_agent.py  skeleton_agent.py
src/latex_merger/: generate_latex_doc.py
src/latex_utils/: metadata_store.py  sanitizer.py  writer.py
src/models/: __init__.py  config.py  content.py  context.py  latex.py  metadata.py  paths.py  settings.py
tests/: .gitignore  README.md  test_e2e_orchestrator.py  test_generate_latex_execute.py  test_transcripts_to_docs.py
tests/inputs/: meta.json  t1.txt
